Bug 46430 - Crash in tp_connection_get_contact_info_cb
Summary: Crash in tp_connection_get_contact_info_cb
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-glib (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-22 00:32 UTC by Guillaume Desmottes
Modified: 2013-07-17 13:13 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
early return if GetContactInfo() failed (930 bytes, patch)
2012-02-22 00:34 UTC, Guillaume Desmottes
Details | Splinter Review

Description Guillaume Desmottes 2012-02-22 00:32:38 UTC
I was connecting/disconnecting my accounts trying to reproduce a bug and found another one.


tp-glib-CRITICAL **: tp_asv_get_uint32: assertion `asv != NULL' failed

Program received signal SIGTRAP, Trace/breakpoint trap.
0x00007ffff420fe18 in g_logv (log_domain=0x7ffff691e2e6 "tp-glib", log_level=G_LOG_LEVEL_CRITICAL, 
    format=0x7ffff42923a0 "%s: assertion `%s' failed", args1=0x7fffffffd358) at gmessages.c:758
758			G_BREAKPOINT ();
(gdb) bt
#0  0x00007ffff420fe18 in g_logv (log_domain=0x7ffff691e2e6 "tp-glib", log_level=G_LOG_LEVEL_CRITICAL, 
    format=0x7ffff42923a0 "%s: assertion `%s' failed", args1=0x7fffffffd358) at gmessages.c:758
#1  0x00007ffff420ff0c in g_log (log_domain=0x7ffff691e2e6 "tp-glib", log_level=G_LOG_LEVEL_CRITICAL, 
    format=0x7ffff42923a0 "%s: assertion `%s' failed") at gmessages.c:792
#2  0x00007ffff420ff4d in g_return_if_fail_warning (log_domain=0x7ffff691e2e6 "tp-glib", 
    pretty_function=0x7ffff69484e0 "tp_asv_get_uint32", expression=0x7ffff69477b2 "asv != NULL")
    at gmessages.c:801
#3  0x00007ffff68b6c32 in tp_asv_get_uint32 (asv=<optimized out>, key=<optimized out>, valid=0x7fffffffd484)
    at dbus.c:1210
#4  0x00007ffff6897ba4 in tp_connection_get_contact_info_cb (proxy=0x1c533f0, properties=0x0, 
    error=<optimized out>, user_data=0x1be6120, weak_object=<optimized out>) at connection-contact-info.c:447
#5  0x00007ffff68e98c6 in _tp_cli_dbus_properties_invoke_callback_get_all (self=0x1c533f0, error=0x1c06a10, 
    args=0x0, generic_callback=0x7ffff6897b10 <tp_connection_get_contact_info_cb>, user_data=<optimized out>, 
    weak_object=<optimized out>) at _gen/tp-cli-generic-body.h:1184
#6  0x00007ffff68f0700 in tp_proxy_pending_call_idle_invoke (p=0x1be6000) at proxy-methods.c:155
#7  0x00007ffff42089fd in g_idle_dispatch (source=0x1bbea10, 
    callback=0x7ffff68f0690 <tp_proxy_pending_call_idle_invoke>, user_data=0x1be6000) at gmain.c:4629
#8  0x00007ffff42062d3 in g_main_dispatch (context=0x8badf0) at gmain.c:2510
#9  0x00007ffff4206f94 in g_main_context_dispatch (context=0x8badf0) at gmain.c:3047
#10 0x00007ffff4207177 in g_main_context_iterate (context=0x8badf0, block=1, dispatch=1, self=0x1b49830)
    at gmain.c:3118
#11 0x00007ffff420723b in g_main_context_iteration (context=0x8badf0, may_block=1) at gmain.c:3179
#12 0x00007ffff4c3662e in g_application_run (application=0x1ae8760, argc=1, argv=0x7fffffffd878)
    at gapplication.c:1496
#13 0x0000000000426ac7 in main (argc=1, argv=0x7fffffffd878) at empathy-call.c:259
Comment 1 Guillaume Desmottes 2012-02-22 00:34:30 UTC
Created attachment 57437 [details] [review]
early return if GetContactInfo() failed
Comment 2 Will Thompson 2012-02-22 03:17:53 UTC
Comment on attachment 57437 [details] [review]
early return if GetContactInfo() failed

Review of attachment 57437 [details] [review]:
-----------------------------------------------------------------

Looks fine.
Comment 3 Guillaume Desmottes 2012-02-22 03:49:24 UTC
Merged to 0.16.
Comment 4 Xavier Claessens 2013-07-17 13:10:09 UTC
The patch got merged into 0.16 branch only, so it got lost in 0.18, 0.20 and master.
Comment 5 Xavier Claessens 2013-07-17 13:13:36 UTC
cherry-picked the commit 7e3739286e7f8e1bada547ae28eb596f220dbfa8.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.