early return if GetContactInfo() failed

https://bugs.freedesktop.org/show_bug.cgi?id=46430